--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy==1.26.4
-pandas==2.1.1
-scikit-learn==1.6.1
-streamlit==1.24.1
-sklearn-pandas==2.2.0
-imbalanced-learn
+pandas==2.2.2
+scikit-learn==1.5.1
+streamlit==1.37.1
+imbalanced-learn==0.12.3
+joblib==1.4.2
